# cargo-workspace

./: Cargo.toml  README.md
src/: main.rs
